[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faida-mcp"
version = "0.1.0"
description = "MCP server for Kenya investment and capital markets — Treasury bonds, NSE equiti"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
faida-mcp = "faida_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
